# crewai_hackathon

./: README.md  crewai_install_mac.sh  crewai_install_win.bat  updated-presentation-2025-02-19.tsx
tjo/tjo/: .gitignore  README.md  pyproject.toml  report.md
tjo/tjo/src/tjo/: crew.py  main.py
