[project]
name = "tjo"
version = "0.1.0"
description = "tjo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
tjo = "tjo.main:run"
run_crew = "tjo.main:run"
train = "tjo.main:train"
replay = "tjo.main:replay"
test_crew = "test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
